# CrossSpectraFOL

./: .gitignore  SpectraShortenerTool  main.py  main_2.py  pyproject.toml
FOL/: apply_mcws.py  build_covariance_matrix.py  calc_radar_physics.py  compare_qc_and_avail.py  create_db.py  debug.py  extra_FOL.py  fol_qc.py  main.py  main_veroni_plot.py  normalize_background.py  peak_finder.py  plot_degradation.py  qc.py  read_cs_file.py
cross_spectra_samples/: CSS_HATY_03_08_20_0000.cs4  CSS_HATY_06_05_03_0030.cs4  CSS_HATY_21_02_08_0230.cs  CSS_OCRA_2025_09_01_000000.csr  CSS_OCRA_23_01_16_0100.cs  CSS_OCRA_25_09_01_0000.cs
cs_combiner/: read_file.py
